@@ -88,13 +88,6 @@ namespace SimpleInjector.Extensions.LifetimeScoping
         {
         }
 
-        /// <summary>Gets the length of the lifestyle.</summary>
-        /// <value>The <see cref="Int32"/> representing the length of this lifestyle.</value>
-        protected override int Length
-        {
-            get { return 100; }
-        }
-
         /// <summary>
         /// Allows registering an <paramref name="action"/> delegate that will be called when the current
         /// lifetime scope ends, but before the scope disposes any instances.
