@@ -804,11 +804,6 @@
             {
                 return () => this.scope;
             }
-
-            protected override int Length
-            {
-                get { throw new NotImplementedException(); }
-            }
         }
     }
 }
